[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-dos"
version = "1.8.14"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
solana-clap-utils = { git = "https://github.com/solindex/clap-utils.git", version = "=1.8.14" }
solana-core = { git = "https://github.com/solindex/core.git", version = "=1.8.14" }
solana-gossip = { git = "https://github.com/solindex/gossip.git", version = "=1.8.14" }
solana-ledger = { git = "https://github.com/solindex/ledger.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-net-utils = { git = "https://github.com/solindex/net-utils.git", version = "=1.8.14" }
solana-perf = { git = "https://github.com/solindex/perf.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-streamer = { git = "https://github.com/solindex/streamer.git", version = "=1.8.14" }
solana-version = { git = "https://github.com/solindex/version.git", version = "=1.8.14" }
solana-client = { git = "https://github.com/solindex/client.git", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
